--- a/assets/templates/filepass-options.phtml
+++ b/assets/templates/filepass-options.phtml
@@ -1,6 +1,7 @@
 <div class="wrap">
     <h1>Filepass Tool Options</h1>
     <form method="post" action="options.php">
+        <?php wp_nonce_field( 'save_filepass_options' ); ?>
         <label for="make_webhook_url">Filepass URL:</label>
         <input type="text" id="make_webhook_url" name="make_webhook_url" value="<?php echo esc_attr($filepass_url); ?>" />
         <p><small>Enter the Webhook URL.</small></p>
